v1 of all of exercise 1
